# TestTask1

./: .gitignore  CMakeLists.txt  Options.h.in  README.md
src/: main.cpp
src/BaseApplication/: BaseApplication.cpp  BaseApplication.h
src/FileReader/: FileReader.cpp  FileReader.h  FileReaderCreator.cpp  FileReaderCreator.h  IFileReader.h
src/ParseProcessor/: IParseProcessor.h  ParseProcessor.cpp  ParseProcessor.h  ParseProcessorCreator.cpp  ParseProcessorCreator.h  ParseResult.h
src/Parser/: IParser.h  Parser.cpp  Parser.h  ParserCreator.cpp  ParserCreator.h  ParserResult.h
src/Report/: IReport.h  Report.cpp  Report.h  ReportCreator.cpp  ReportCreator.h
src/String/: String.h
src/TestApplication/: TestApplication.cpp  TestApplication.h
src/ThreadSafeQueue/: ThreadSafeQueue.h
test/generator/: a.out  main.cpp  yyy.txt
